[project]
name = "mini-chat-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langgraph>=0.3.21",
    "langgraph-reflection>=0.0.1",
    "openevals[e2b-code-interpreter]==0.0.15",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.81",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
